--- a/set.html
+++ b/set.html
@@ -198,7 +198,7 @@
 				<div class="container">
 					<div class="top__body">
 						<div class="top__title title">
-							Фотогалереи
+							Учебно-тренировочные сборы 2020 года, Хомутинино.
 						</div>
 						<div class="top__breadcrumbs">
 							<a href="index.html" class="top__link">
@@ -206,101 +206,116 @@
 							</a>
 							<span> / </span>
 							<a href="gallery.html" class="top__link">
-								Список Фотогалерей
+								Фотогалерея
 							</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="gallery">
+			<div class="set">
 				<div class="container">
-					<div class="gallery__body">
-						<div class="gallery__item">
-							<div class="gallery__image">
-								<a href="#" class="gallery__image-hover"></a>
-								<img src="img/gallery/01.jpg" alt="">
+					<div class="set__body">
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/01.jpg" alt="">
 							</div>
-							<a href="set.html" class="gallery__link">
-								Учебно - тренировочные сборы 2020 года, Хомутинино
-							</a>
 						</div>
-						<div class="gallery__item">
-							<div class="gallery__image">
-								<a href="#" class="gallery__image-hover"></a>
-								<img src="img/gallery/02.jpg" alt="">
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/02.jpg" alt="">
 							</div>
-							<a href="set.html" class="gallery__link">
-								Встреча с олимпийским огнем
-							</a>
 						</div>
-						<div class="gallery__item">
-							<div class="gallery__image">
-								<a href="#" class="gallery__image-hover"></a>
-								<img src="img/gallery/03.jpg" alt="">
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/03.jpg" alt="">
 							</div>
-							<a href="set.html" class="gallery__link">
-								Команда синхронного катания "Айсберг"
-							</a>
 						</div>
-						<div class="gallery__item">
-							<div class="gallery__image">
-								<a href="#" class="gallery__image-hover"></a>
-								<img src="img/gallery/04.jpg" alt="">
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/04.jpg" alt="">
 							</div>
-							<a href="set.html" class="gallery__link">
-								Летние учебно-тренировочные сборы
-							</a>
 						</div>
-						<div class="gallery__item">
-							<div class="gallery__image">
-								<a href="#" class="gallery__image-hover"></a>
-								<img src="img/gallery/05.jpg" alt="">
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/05.jpg" alt="">
 							</div>
-							<a href="set.html" class="gallery__link">
-								Новогодний праздник 2020
-							</a>
 						</div>
-						<div class="gallery__item">
-							<div class="gallery__image">
-								<a href="#" class="gallery__image-hover"></a>
-								<img src="img/gallery/06.jpg" alt="">
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/06.jpg" alt="">
 							</div>
-							<a href="set.html" class="gallery__link">
-								Новогодний традиционный турнир по хоккею.Тренер Яковлева
-							</a>
 						</div>
-						<div class="gallery__item">
-							<div class="gallery__image">
-								<a href="#" class="gallery__image-hover"></a>
-								<img src="img/gallery/07.jpg" alt="">
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/07.jpg" alt="">
 							</div>
-							<a href="set.html" class="gallery__link">
-								Летние учебно-тренировочные сборы
-							</a>
 						</div>
-						<div class="gallery__item">
-							<div class="gallery__image">
-								<a href="#" class="gallery__image-hover"></a>
-								<img src="img/gallery/08.jpg" alt="">
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/08.jpg" alt="">
 							</div>
-							<a href="set.html" class="gallery__link">
-								Новогодний праздник 2020
-							</a>
 						</div>
-						<div class="gallery__item">
-							<div class="gallery__image">
-								<a href="#" class="gallery__image-hover"></a>
-								<img src="img/gallery/09.jpg" alt="">
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/09.jpg" alt="">
 							</div>
-							<a href="set.html" class="gallery__link">
-								Новогодний традиционный турнир по хоккею.Тренер Яковлева
-							</a>
+						</div>
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/01.jpg" alt="">
+							</div>
+						</div>
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/02.jpg" alt="">
+							</div>
+						</div>
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/03.jpg" alt="">
+							</div>
+						</div>
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/04.jpg" alt="">
+							</div>
+						</div>
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/05.jpg" alt="">
+							</div>
+						</div>
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/06.jpg" alt="">
+							</div>
+						</div>
+						<div class="set__item">
+							<div class="set__image">
+								<a href="#" class="set__hover"></a>
+								<img src="img/set/07.jpg" alt="">
+							</div>
 						</div>
 					</div>
-					<div class="gallery__pagination pagination">
+					<div class="set__pagination pagination">
 						<a href="#" class="pagination__left-arrow pagination__arrow"></a>
 						<div class="pagination__state">
-							1 из 4
+							1 из 2
 						</div>
 						<a href="#" class="pagination__right-arrow pagination__arrow"></a>
 					</div>
