--- a/article.html
+++ b/article.html
@@ -17,7 +17,7 @@
 			<div class="container">
 				<div class="header__body">
 					<div class="header__close-area"></div>
-					<a href="#" class="header__logo">
+					<a href="index.html" class="header__logo">
 						<div class="header__image">
 							<img src="img/header/logo.png" alt="">
 						</div>
@@ -30,7 +30,7 @@
 					<nav id="header-menu" class="header__menu">
 						<ul class="header__list">
 							<li>
-								<a href="#" class="header__link">О Школе</a>
+								<a href="index.html" class="header__link">О Школе</a>
 								<span class="arrow"></span>
 								<ul class="sub-menu__list sub-menu__list-subordinate">
 									<li>
@@ -102,7 +102,7 @@
 								</ul>
 							</li>
 							<li>
-								<a href="#" class="header__link">Новости</a>
+								<a href="list.html" class="header__link">Новости</a>
 								<span class="arrow"></span>
 								<ul class="sub-menu__list sub-menu__list-subordinate">
 									<li>
@@ -150,7 +150,7 @@
 								</ul>
 							</li>
 							<li>
-								<a href="#" class="header__link">Галерея</a>
+								<a href="gallery.html" class="header__link">Галерея</a>
 								<span class="arrow"></span>
 								<ul class="sub-menu__list sub-menu__list-subordinate sub-menu__list-last">
 									<li>
@@ -290,9 +290,9 @@
 								<div class="event__genre">
 									Новости
 								</div>
-								<a href="#" class="event__title">
+								<div class="event__title event__title-article">
 									Госуслуги стали доступнее
-								</a>
+								</div>
 								<div class="event__date">
 									22.11.2018 18:02:40
 								</div>
@@ -392,7 +392,9 @@
 					<div class="footer__flex-row">
 						<div class="footer__column footer__column-logo">
 							<div class="footer__logo">
-								<img src="img/footer/logo-todes.png" alt="">
+								<a href="index.html">
+									<img src="img/footer/logo-todes.png" alt="">
+								</a>
 							</div>
 							<div class="footer__mobile-button">
 								<span class="show-info">Показать подробнее</span>
@@ -453,7 +455,7 @@
 						<div class="footer__column _hidden-element">
 							<nav class="footer__list">
 								<li>
-									<a href="#" class="footer__link">О школе</a>
+									<a href="index.html" class="footer__link">О школе</a>
 								</li>
 								<li>
 									<a href="#" class="footer__link">Документы</a>
@@ -462,13 +464,13 @@
 									<a href="#" class="footer__link">Правила и положения</a>
 								</li>
 								<li>
-									<a href="#" class="footer__link">Новости</a>
+									<a href="list.html" class="footer__link">Новости</a>
 								</li>
 								<li>
 									<a href="#" class="footer__link">Полезная информация</a>
 								</li>
 								<li>
-									<a href="#" class="footer__link">Галерея</a>
+									<a href="gallery.html" class="footer__link">Галерея</a>
 								</li>
 								<li>
 									<a href="#" class="footer__link">Контакты</a>
@@ -484,10 +486,10 @@
 						</div>
 						<div class="footer__developer">
 							<div class="footer__dev-name">
-								Разработка сайта <a href="https://creatizer.ru/"> Creatizer</a>
+								Разработка сайта <a target="_blank" href="https://creatizer.ru/"> Creatizer</a>
 							</div>
 							<div class="footer__dev-logo">
-								<a href="https://creatizer.ru/">
+								<a  target="_blank" href="https://creatizer.ru/">
 									<img src="img/footer/creatizer-logo.png" alt="">
 								</a>
 							</div>
