--- a/article.html
+++ b/article.html
@@ -197,9 +197,9 @@
 			<div class="top top-article">
 				<div class="container">
 					<div class="top__body">
-						<div class="top__title title">
+						<h1 class="top__title title">
 							Наши новости и мероприятия
-						</div>
+						</h1>
 						<div class="top__breadcrumbs">
 							<a href="index.html" class="top__link">
 								Главная
@@ -290,9 +290,9 @@
 								<div class="event__genre">
 									Новости
 								</div>
-								<div class="event__title event__title-article">
+								<h2 class="event__title event__title-article">
 									Госуслуги стали доступнее
-								</div>
+								</h2>
 								<div class="event__date">
 									22.11.2018 18:02:40
 								</div>
