--- a/list.html
+++ b/list.html
@@ -197,9 +197,9 @@
 			<div class="top">
 				<div class="container">
 					<div class="top__body">
-						<div class="top__title title">
+						<h1 class="top__title title">
 							Наши новости и мероприятия
-						</div>
+						</h1>
 						<div class="top__breadcrumbs">
 							<a href="index.html" class="top__link">
 								Главная
