--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 							</div>
 						</div>
 						<div class="footer__column _hidden-element">
-							<nav class="footer__list">
+							<ul class="footer__list">
 								<li>
 									<a href="#about" class="footer__link">О школе</a>
 								</li>
@@ -561,7 +561,7 @@
 								<li>
 									<a href="#" class="footer__link">Контакты</a>
 								</li>
-							</nav>
+							</ul>
 						</div>
 					</div>
 					<div class="footer__bottom">
