--- a/list.html
+++ b/list.html
@@ -455,7 +455,7 @@
 							</div>
 						</div>
 						<div class="footer__column _hidden-element">
-							<nav class="footer__list">
+							<ul class="footer__list">
 								<li>
 									<a href="index.html" class="footer__link">О школе</a>
 								</li>
@@ -477,7 +477,7 @@
 								<li>
 									<a href="#" class="footer__link">Контакты</a>
 								</li>
-							</nav>
+							</ul>
 						</div>
 					</div>
 					<div class="footer__bottom">
