--- a/set.html
+++ b/set.html
@@ -389,7 +389,7 @@
 							</div>
 						</div>
 						<div class="footer__column _hidden-element">
-							<nav class="footer__list">
+							<ul class="footer__list">
 								<li>
 									<a href="index.html" class="footer__link">О школе</a>
 								</li>
@@ -411,7 +411,7 @@
 								<li>
 									<a href="#" class="footer__link">Контакты</a>
 								</li>
-							</nav>
+							</ul>
 						</div>
 					</div>
 					<div class="footer__bottom">
