--- a/article.html
+++ b/article.html
@@ -375,7 +375,7 @@
 								</div>
 								<div class="event__back-button-container">
 									<a href="list.html" class="event__back-button">
-										<span>Вернуться</span> к списку новостей
+										<span>Вернуться &nbsp;</span>  к списку новостей
 									</a>
 								</div>
 							</div>
