--- a/set.html
+++ b/set.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="css/jquery.fancybox.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Тодес</title>
 </head>
@@ -217,97 +218,97 @@
 					<div class="set__body">
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/01.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/01.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/02.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/02.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/03.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/03.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/04.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/04.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/05.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/05.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/06.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/06.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/07.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/07.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/08.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/08.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/09.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/09.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/01.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/01.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/02.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/02.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/03.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/03.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/04.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/04.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/05.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/05.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/06.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/06.jpg" alt="">
 							</div>
 						</div>
 						<div class="set__item">
 							<div class="set__image">
-								<a href="#" class="set__hover"></a>
+								<a href="img/set/07.jpg" class="set__hover" data-fancybox="gallery"></a>
 								<img src="img/set/07.jpg" alt="">
 							</div>
 						</div>
@@ -438,6 +439,7 @@
 
 
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="js/jquery.fancybox.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
